# phi_turtlebot3

notebook/: segmentation.ipynb
src/phi_turtlebot3_description/: CMakeLists.txt  package.xml
src/phi_turtlebot3_description/config/: slam_config.yaml
src/phi_turtlebot3_description/launch/: spawn_gazebo.launch.py  spawn_rviz.launch.py  spawn_slam.launch.py  spawn_states_publishers.launch.py  spawn_turtlebot3.launch.py
src/phi_turtlebot3_description/models/black_line/: model.config
src/phi_turtlebot3_description/models/line_follow/: model.config  model.sdf
src/phi_turtlebot3_description/models/line_follow/meshes/: line_follow.dae  tiny_line_follow.dae
src/phi_turtlebot3_description/models/obstacle2x2/house/meshes/: mesh.dae
src/phi_turtlebot3_description/models/turtlebot3_burger/: model.sdf
src/phi_turtlebot3_description/models/turtlebot3_burger_cam/: model.sdf
src/phi_turtlebot3_description/rviz/: model.rviz
src/phi_turtlebot3_description/urdf/: turtlebot3_burger.urdf  turtlebot3_burger_cam.urdf  turtlebot3_waffle.urdf  turtlebot3_waffle_pi.urdf
src/phi_turtlebot3_description/worlds/: line_world.sdf  turtlebot3_dqn_stage3.world  turtlebot3_dqn_stage4.world
src/phi_turtlebot3_exploration/: CMakeLists.txt  package.xml
src/phi_turtlebot3_exploration/launch/: bringup_exploration.launch.py  bringup_robot.launch.py  bringup_simulation.launch.py
src/phi_turtlebot3_exploration/script/: potential_field.py
src/phi_turtlebot3_exploration/scripts/: harmonic_field.py  main.py
src/phi_turtlebot3_exploration/src/: obstacle1.cpp  obstacle2.cpp  obstacles.cpp  turtlebot3_drive.cpp
src/phi_turtlebot3_linefollower/: CMakeLists.txt  README.md  algorithm.md  package.xml
src/phi_turtlebot3_linefollower/config/: model_bridge.yaml
src/phi_turtlebot3_linefollower/launch/: bringup_line_follower.launch.py  bringup_simulation.launch.py  line_follower.launch.py  simulation.launch.py
src/phi_turtlebot3_linefollower/scripts/: Line_follow.py  __init__.py  controller.py  line2.py  line_detection.py  line_follower.py  robot_controller.py  view.py
